# my-wiki-chat-app

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
frontend/: package.json
frontend/src/app/: page.tsx
